userreply partial view and action aaded

--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -64,7 +64,7 @@
 										<li>
 											<a asp-controller="Blog" asp-action="Index">blog</a>
 										</li>
-										<li><a href="contact.html">Contact</a></li>
+										<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
 										<li><a href="contact.html">Buy Now</a>
 									</ul>
 								</nav>
