--- a/EduHomeUI/Views/Shared/Components/Head/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Head/Default.cshtml
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="/assets/css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link rel="stylesheet" href="/assets/css/responsive.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<script src="/assets/js/vendor/modernizr-3.11.2.min.js"></script>
 </head>
