slider service added

--- a/EduHomeUI/Views/Shared/_SubscribeSection.cshtml
+++ b/EduHomeUI/Views/Shared/_SubscribeSection.cshtml
@@ -1,5 +1,6 @@
 ﻿@using EduHomeUI.ViewModels.SubscribeViewModels;
- @model SubscriberCreateViewModel 
+ @model SubscriberCreateViewModel
+<partial name="_Notification" />
  <!-- Subscribe Start -->
 
 <div class="subscribe-area pt-60 pb-70">
