--- a/EduHomeUI/Views/Shared/_UserReplySection.cshtml
+++ b/EduHomeUI/Views/Shared/_UserReplySection.cshtml
@@ -1,5 +1,6 @@
 ﻿@using EduHomeUI.ViewModels.UserReplyViewModel.cs;
 @model UserReplyCreateViewModel
+<partial name="_Notification" />
 <div class="col-lg-7 col-md-7">
     <div class="reply-area">
         <h3>LEAVE A message</h3>
