--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -481,6 +481,7 @@
                                 <li><a asp-controller="Notice" asp-action="Index">Notices</a></li>
                                 <li><a asp-controller="Blog" asp-action="Index">Blogs</a></li>
                                 <li><a asp-controller="Setting" asp-action="Index">Settings</a></li>
+                                <li><a asp-controller="Slider" asp-action="Index">Sliders</a></li>
                             </ul>
                         </li>
 
