--- a/EduHomeUI/Areas/EHMasterPanel/Views/Slider/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Slider/Index.cshtml
@@ -19,6 +19,7 @@
                                 <th>Image</th>
                                 <th>Title</th>
                                 <th>Description</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -27,7 +28,7 @@
 
                                     <tr>
                                         <td>@count</td>
-                                        <td><img src="@slider.ImagePath" alt="@slider.ImageName" style="width:100px" /></td>
+                                        <td><img src="/@slider.ImagePath" alt="@slider.ImageName" style="width:100px" /></td>
                                         <td>@slider.Title</td>
                                         <td>@slider.Description</td>
                                         <td>
