--- a/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Course/Index.cshtml
@@ -32,7 +32,7 @@
                                     {
                                         <tr>
                                             <td>@count</td>
-                                            <td><img src="@course.ImagePath" style="width:100px" /></td>
+                                            <td><img src="/@course.ImagePath" style="width:100px" /></td>
                                             <td>@course.Name</td>
                                             <td>@course.Description</td>
                                             <td>
