admin head viewcomponent added

--- a/EduHomeUI/Views/Home/Index.cshtml
+++ b/EduHomeUI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EduHomeUI.ViewModels.HomeViewModels;
-@model HomeIndexViewModel
+@model HomeCompositeViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
@@ -9,7 +9,7 @@
 <section id="slider-container" class="slider-area">
     <div class="slider-owl owl-theme owl-carousel">
         <!-- Start Slingle Slide -->
-        @foreach (var slider in Model.Sliders)
+        @foreach (var slider in Model.HomeIndex.Sliders)
         {
             <div class="single-slide item" style="background-image: url(@slider.ImagePath)">
                 <!-- Start Slider Content -->
@@ -45,7 +45,7 @@
                         int index = 0;
                     }
 
-                    @foreach (var notice in Model.Notices.Take(9))
+                    @foreach (var notice in Model.HomeIndex.Notices.Take(9))
                     {
                         string divClass = "single-notice-left";
                         if (index == 2)
@@ -113,13 +113,13 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title">
-                    @await Component.InvokeAsync("sectionlogo")
+                    @await Component.InvokeAsync("Sectionlogo")
                     <h2>COURSES WE OFFER</h2>
                 </div>
             </div>
         </div>
         <div class="row">
-            @foreach (var course in Model.Courses.OrderByDescending(c => c.DateCreated).Take(3))
+            @foreach (var course in Model.HomeIndex.Courses.OrderByDescending(c => c.DateCreated).Take(3))
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="single-course">
@@ -150,7 +150,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title">
-                    <img src="img/icon/section.png" alt="section-title">
+                   @await Component.InvokeAsync("Sectionlogo")
                     <h2>UPCOMMING EVENTS</h2>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                 
 
 
-                @foreach (var newEvent in Model.Events.OrderByDescending(e => e.Date).Take(4))
+                @foreach (var newEvent in Model.HomeIndex.Events.OrderByDescending(e => e.Date).Take(4))
                 {
                     <div class="@(eventCount < 3 ? "single-event mb-35" : "single-event")">
                         <div class="event-date">
@@ -189,7 +189,7 @@
                     int eventCountEvent = 0;
                 }
 
-                @foreach (var newEvent in Model.Events.OrderByDescending(e => e.Date).Skip(4).Take(4))
+                @foreach (var newEvent in Model.HomeIndex.Events.OrderByDescending(e => e.Date).Skip(4).Take(4))
                 {
                     <div class="@(eventCount < 3 ? "single-event mb-35" : "single-event")">
                         <div class="event-date">
@@ -247,7 +247,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title text-center">
-                    <img src="img/icon/section.png" alt="section-title">
+                    @await Component.InvokeAsync("Sectionlogo")
                     <h2>LATEST FROM BLOG</h2>
                 </div>
             </div>
@@ -315,33 +315,5 @@
 </div>
 <!-- Blog Area End -->
 <!-- Subscribe Start -->
-<div class="subscribe-area pt-60 pb-70">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="subscribe-content section-title text-center">
-                    <h2>subscribe our newsletter</h2>
-                    <p>I must explain to you how all this mistaken idea </p>
-                </div>
-                <div class="newsletter-form mc_embed_signup">
-                    <form action="https://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll" class="mc-form">
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div class="mc-news" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef" tabindex="-1" value=""></div>
-                            <button id="mc-embedded-subscribe" class="default-btn" type="submit" name="subscribe"><span>subscribe</span></button>
-                        </div>
-                    </form>
-                    <!-- mailchimp-alerts Start -->
-                    <div class="mailchimp-alerts">
-                        <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                        <div class="mailchimp-success"></div><!-- mailchimp-success end -->
-                        <div class="mailchimp-error"></div><!-- mailchimp-error end -->
-                    </div>
-                    <!-- mailchimp-alerts end -->
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@*<partial name="_SubscribeSection" />*@
 <!-- Subscribe End -->
