--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/Components/Headadmin/Default.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/Components/Headadmin/Default.cshtml
@@ -2,7 +2,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Dashboard | EduHome - Admin & Dashboard Template</title>
+    <title>@Model["admintabtitle"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
     <meta content="Themesbrand" name="author" />
