--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -50,7 +50,7 @@
 										<li>
 											<a asp-controller="Home" asp-action="Index">Home</a>
 										</li>
-										<li><a href="about.html">About</a></li>
+										<li><a asp-controller="About" asp-action="Index" >About</a></li>
 										<li>
 											<a asp-controller="Course" asp-action="Index">courses</a>
 										</li>
