redirection bug fix

--- a/EduHomeUI/Views/About/Index.cshtml
+++ b/EduHomeUI/Views/About/Index.cshtml
@@ -58,10 +58,10 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-teacher">
                             <div class="single-teacher-img">
-                                <a asp-asp-controller="Teacher" asp-action="Details" asp-route-id="@teacher.Id"><img src="@teacher.ImagePath" alt="@teacher.ImageName"></a>
+                                <a asp-controller="Teacher" asp-action="Details" asp-route-id="@teacher.Id"><img src="@teacher.ImagePath" alt="@teacher.ImageName"></a>
                             </div>
                             <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">@teacher.Name @teacher.Surname</a></h2>
+                                <h2><a asp-controller="Teacher" asp-action="Details" asp-route-id="@teacher.Id">@teacher.Name @teacher.Surname</a></h2>
                                 <h4>@teacher.Position</h4>
                                 <ul>
                                     <li><a href="#"><i class="zmdi zmdi-facebook"></i></a></li>
