home index blogs

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Event/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Event/Index.cshtml
@@ -34,7 +34,7 @@
                                     {
                                         <tr>
                                             <td>@count</td>
-                                            <td><img src="@newEvent.ImagePath" alt="@newEvent.ImageName" style="width:100px" /></td>
+                                            <td><img src="/@newEvent.ImagePath" alt="@newEvent.ImageName" style="width:100px" /></td>
                                             <td>@newEvent.Title</td>
                                             <td>@newEvent.Venue</td>
                                             <td>@newEvent.Date</td>
