subscribe email - blog index page

--- a/EduHomeUI/Views/Home/Index.cshtml
+++ b/EduHomeUI/Views/Home/Index.cshtml
@@ -265,17 +265,17 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single-blog">
                             <div class="blog-img">
-                                <a href="blog-details.html"><img src="img/blog/blog1.jpg" alt="blog"></a>
+                                <a href="blog-details.html"><img src="@blog.ImagePath" alt="@blog.ImageName"></a>
                                 <div class="blog-hover">
                                     <a href="blog-details.html"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="blog-content">
                                 <div class="blog-top">
-                                    <p>By Alex  /  June 20, 2023  /  <i class="fa fa-comments-o"></i> 4</p>
+                                    <p>By @blog.AuthorName  / @blog.DateCreated.ToString("dd,MMMM,yyyyy")  /  <i class="fa fa-comments-o"></i> @blog.CommentCount</p>
                                 </div>
                                 <div class="blog-bottom">
-                                    <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
+                                    <h2><a href="blog-details.html">@blog.Title</a></h2>
                                     <a href="blog-details.html">read more</a>
                                 </div>
                             </div>
